--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <div style="font-size: 20px; line-height: 50px; padding: 200px; background-color: AntiqueWhite;">
-<p></p><p></p>
+
  
 
 	A.A. Milnei:      
@@ -1312,7 +1312,7 @@ Quod non novi, nescio
 Dormo, sterto, somnio.
 
 
-
+</div>
 <html>
 
 
