--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <div style="font-size: 20px; line-height: 50px; padding: 200px; background-color: AntiqueWhite;">
 
 
-DEUXIEME PARTIE<p></p> 
+DEUXIEME PARTIE<p></p> (Attila)
 LA ROUTE<p></p> 
 4 avril. Le canon a tonné toute la nuit.
 On distinguait nettement son bruit de celui des bombes ou de la D. C. A. Ils devaient être à une quarantaine de kilomètres. Depuis plusieurs jours, on parlait de l’évacuation.
@@ -714,6 +714,9 @@ ________________________________________
 [8] Kommando de travail.
 [9] Membre de la milice populaire.
 [10] Kapo chargé de la surveillance de détenus à l’usine.
+[11] Par 5 !
+
+
 [11] Par 5 !
 
 
