--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <div style="font-size: 20px; line-height: 50px; padding: 200px; background-color: AntiqueWhite;">
 
+     THE EVERY-DAY LIFE 
+    OF ABRAHAM LINCOLN
 
-"How beautiful to see
+    "How beautiful to see
  Once more a shepherd of mankind indeed.
  Who loved his charge, but never loved to lead;
  One whose meek flock the people joyed to be,
@@ -34,9 +36,11 @@ JAMES RUSSELL LOWELL.
 
 
  <p></p>
-ABRAHAM LINCOLN
- FROM AN UNPUBLISHED ORIGINAL DRAWING
- BY JOHN NELSON MARBLE
+
+    ABRAHAM LINCOLN
+    
+
+    
 
 THE EVERY-DAY LIFE OF ABRAHAM LINCOLN
 A NARRATIVE AND DESCRIPTIVE
