--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <div style="font-size: 20px; line-height: 50px; padding: 200px; background-color: AntiqueWhite;">
 
      THE EVERY-DAY LIFE 
-    OF ABRAHAM LINCOLN
+    OF ABRAHAM LINCOLN<p></p>
 
     "How beautiful to see
  Once more a shepherd of mankind indeed.
