--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
  A sea-mark now, now lost in vapors blind;
  Broad prairie rather, genial, level-lined,
  Fruitful and friendly for all human kind,
- Yet also nigh to heaven and loved of loftiest stars.
+ Yet also nigh to heaven and loved of loftiest stars.<p></p>
  
  "Great captains, with their guns and drums,
  Disturb our judgment for the hour,
@@ -30,9 +30,9 @@
  Our children shall behold his fame,
  The kindly-earnest, brave, foreseeing man,
  Sagacious, patient, dreading praise, not blame,
- New birth of our new soil, the first American."
+ New birth of our new soil, the first American."<p></p>
  
-JAMES RUSSELL LOWELL.
+JAMES RUSSELL LOWELL.<p></p>
 
 
  <p></p>
