--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <div style="font-size: 20px; line-height: 50px; padding: 200px; background-color: AntiqueWhite;">
 
-     THE EVERY-DAY LIFE 
+    FRANCIS FISHER BROWNE
+          1843-1913<p></p>
+    THE EVERY-DAY LIFE 
     OF ABRAHAM LINCOLN<p></p>
 
     "How beautiful to see
